--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 										<div class="header-nav-main header-nav-main-text-capitalize header-nav-main-effect-2 header-nav-main-sub-effect-1">
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
-													<li><a href="demo-cleaning-services.html" class="nav-link active">THE HOUSE</a></li>
-													<li><a href="demo-cleaning-services-about.html" class="nav-link">PACKAGES</a></li>
-													<li><a href="demo-cleaning-services-services.html" class="nav-link">ROOMS</a></li>
-													<li><a href="demo-cleaning-services-portfolio.html" class="nav-link">ACTIVITIES</a></li>
-													<li><a href="demo-cleaning-services-prices.html" class="nav-link">CONTACT US</a></li>
+													<li><a href="thehouse.html" class="nav-link active">THE HOUSE</a></li>
+													<li><a href="packages.html" class="nav-link">PACKAGES</a></li>
+													<li><a href="rooms.html" class="nav-link">ROOMS</a></li>
+													<li><a href="activities.html" class="nav-link">ACTIVITIES</a></li>
+													<li><a href="contactus.html" class="nav-link">CONTACT US</a></li>
 												</ul>
 											</nav>
 										</div>
@@ -529,4 +529,5 @@
 
 	</body>
 </html>
+
 
