--- a/thehouse.html
+++ b/thehouse.html
@@ -25,6 +25,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/792f631209.js" crossorigin="anonymous"></script>
 		<!-- Vendor CSS -->
 		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
