--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-cleaning-services.html">
+										<a href="inedx.html">
 											<img src="img/loogo.png" class="img-fluid" width="123" height="32" alt="" />
 										</a>
 									</div>
@@ -198,7 +198,7 @@
 
       <!-- Only this button is aligned to the right -->
       <div class="text-end">
-        <a href="demo-cleaning-services-about.html" class="btn btn-primary btn-modern font-weight-bold text-5 px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1800">DISCOVER</a>
+        <a href="about.html" class="btn btn-primary btn-modern font-weight-bold text-5 px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1800">DISCOVER</a>
       </div>
     </div>
   </div>
@@ -529,5 +529,6 @@
 
 	</body>
 </html>
+
 
 
