--- a/activities.html
+++ b/activities.html
@@ -61,7 +61,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="demo-cleaning-services.html">
+										<a href="index.html">
 											<img src="img/loogo.png" class="img-fluid" width="123" height="32" alt="" />
 										</a>
 									</div>
@@ -73,18 +73,18 @@
 										<div class="header-nav-main header-nav-main-text-capitalize header-nav-main-effect-2 header-nav-main-sub-effect-1">
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
-													<li><a href="demo-cleaning-services.html" class="nav-link">THE HOUSE</a></li>
-													<li><a href="demo-cleaning-services-about.html" class="nav-link">PACKAGES</a></li>
-													<li><a href="demo-cleaning-services-services.html" class="nav-link">ROOMS</a></li>
-													<li><a href="demo-cleaning-services-portfolio.html" class="nav-link active">ACTIVITIES</a></li>
-													<li><a href="demo-cleaning-services-prices.html" class="nav-link">CONTACT US</a></li>
+													<li><a href="thehouse.html" class="nav-link">THE HOUSE</a></li>
+													<li><a href="packages.html" class="nav-link">PACKAGES</a></li>
+													<li><a href="rooms.html" class="nav-link">ROOMS</a></li>
+													<li><a href="activities.html" class="nav-link active">ACTIVITIES</a></li>
+													<li><a href="contactus.html" class="nav-link">CONTACT US</a></li>
 												</ul>
 											</nav>
 										</div>
 									</div>
 									<div class="header-column justify-content-end">
 									<div class="header-row">
-										<a href="demo-cleaning-services-contact.html" class="custom-header-top-btn-style-1 btn btn-secondary font-weight-bold px-4 px-sm-5 py-3">BOOK NOW</a>
+										<a href="booknow.html" class="custom-header-top-btn-style-1 btn btn-secondary font-weight-bold px-4 px-sm-5 py-3">BOOK NOW</a>
 									</div>
 								</div>
 									<button class="btn header-btn-collapse-nav" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
