--- a/booknow.html
+++ b/booknow.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hostel Booking - Sahara Oasis Hostel</title>
+    <title>Hostel Booking - ELSTAR</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <style>
         body {
-            background: linear-gradient(135deg, #f5f7fa 0%, #e4edf5 100%);
+            background: linear-gradient(135deg, #f8f9ff 0%, #eef2ff 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -21,7 +21,7 @@
             background: white;
         }
         .header-bg {
-            background: linear-gradient(120deg, #4a69bd 0%, #1e3c72 100%);
+            background: linear-gradient(120deg, #6a11cb 0%, #2575fc 100%);
             color: white;
             padding: 25px 0;
         }
@@ -34,10 +34,10 @@
         .package-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            border-color: #4a69bd;
+            border-color: #6a11cb;
         }
         .package-card.selected {
-            border-color: #4a69bd;
+            border-color: #6a11cb;
             background-color: #f0f4ff;
         }
         .extra-option {
@@ -53,16 +53,16 @@
         .price-tag {
             font-size: 1.2rem;
             font-weight: 700;
-            color: #1e3c72;
+            color: #6a11cb;
         }
         .btn-primary {
-            background: linear-gradient(120deg, #4a69bd 0%, #1e3c72 100%);
+            background: linear-gradient(120deg, #6a11cb 0%, #2575fc 100%);
             border: none;
             padding: 10px 25px;
             font-weight: 600;
         }
         .btn-primary:hover {
-            background: linear-gradient(120deg, #3a59ad 0%, #1a3565 100%);
+            background: linear-gradient(120deg, #5a0db9 0%, #1a68e8 100%);
         }
         .guest-counter {
             display: inline-flex;
@@ -100,7 +100,7 @@
             top: 20px;
         }
         .invoice-header {
-            background: linear-gradient(120deg, #4a69bd 0%, #1e3c72 100%);
+            background: linear-gradient(120deg, #6a11cb 0%, #2575fc 100%);
             color: white;
             padding: 20px;
             border-top-left-radius: 15px;
@@ -120,7 +120,7 @@
             font-size: 1.2rem;
             margin-top: 15px;
             padding-top: 15px;
-            border-top: 2px solid #4a69bd;
+            border-top: 2px solid #6a11cb;
         }
         .no-selection {
             text-align: center;
@@ -130,7 +130,7 @@
         }
         .package-name {
             font-weight: 600;
-            color: #1e3c72;
+            color: #6a11cb;
         }
         .extra-name {
             color: #495057;
@@ -162,12 +162,17 @@
             color: #6c757d;
             margin-top: 5px;
         }
+        .logo-text {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: 700;
+            letter-spacing: -0.5px;
+        }
     </style>
 </head>
 <body>
     <div class="container py-4">
         <div class="header-bg text-center mb-4">
-            <h1 class="display-5 fw-bold">Sahara Oasis Hostel</h1>
+            <h1 class="display-5 fw-bold logo-text">ELSTAR</h1>
             <p class="lead">Book your desert adventure</p>
         </div>
 
@@ -341,8 +346,8 @@
         </div>
         
         <div class="footer">
-            <p class="mb-0">Sahara Oasis Hostel • Marrakech, Morocco</p>
-            <p class="mb-0">+212 524 123 456 • info@sahara-oasis.com</p>
+            <p class="mb-0">ELSTAR Hostel • Marrakech, Morocco</p>
+            <p class="mb-0">+212 524 123 456 • info@elstar-hostel.com</p>
         </div>
     </div>
 
@@ -661,7 +666,7 @@
                 const grandTotal = packageTotal + extrasTotal;
                 
                 // Build WhatsApp message with detailed package info
-                let whatsappMessage = `*NEW HOSTEL BOOKING REQUEST*\n\n`;
+                let whatsappMessage = `*NEW ELSTAR HOSTEL BOOKING REQUEST*\n\n`;
                 whatsappMessage += `*Full Name:* ${fullName}\n`;
                 whatsappMessage += `*Phone:* ${phone}\n\n`;
                 whatsappMessage += `*Selected Package:*\n`;
