--- a/activities.html
+++ b/activities.html
@@ -261,7 +261,7 @@
 						
 					</div>
 					<div class="align-items-center justify-content-around mt-5 text-center">
-					<a href="#" class="btn btn-primary btn-xl mb-2">Book Your Package</a></div>
+					<a href="booknow.html" class="btn btn-primary btn-xl mb-2">Book Your Package</a></div>
 					
 					<div class="row align-items-center text-center my-5">
 						<div class="col-sm-4 col-xl-2 mb-5 mb-xl-0">
