--- a/packages.html
+++ b/packages.html
@@ -84,7 +84,7 @@
 									</div>
 									<div class="header-column justify-content-end">
 									<div class="header-row">
-										<a href="demo-cleaning-services-contact.html" class="custom-header-top-btn-style-1 btn btn-secondary font-weight-bold px-4 px-sm-5 py-3">BOOK NOW</a>
+										<a href="booknow.html" class="custom-header-top-btn-style-1 btn btn-secondary font-weight-bold px-4 px-sm-5 py-3">BOOK NOW</a>
 									</div>
 								</div>
 									<button class="btn header-btn-collapse-nav" data-bs-toggle="collapse" data-bs-target=".header-nav-main nav">
@@ -293,7 +293,7 @@
 			</div>
 			<div class="row justify-content-center pt-5">
 				<div class="col-lg-9 text-center">
-				<a href="#" class="btn btn-primary btn-lg mb-2 text-5">Book Your Package</a>
+				<a href="booknow.html" class="btn btn-primary btn-lg mb-2 text-5">Book Your Package</a>
 				</div>
 			</div>
 			<div class="text-center overflow-hidden w-100 pt-3">
