--- a/rooms.html
+++ b/rooms.html
@@ -158,24 +158,27 @@
 							<div class="p-absolute right-0">
 							</div>
 							<div data-plugin-float-element="" data-plugin-options="{'startPos': 'bottom', 'speed': 10.0, 'transition': true, 'transitionDuration': 1000}" style="bottom: 0px; transition: transform 1000ms ease-out; transform: translate3d(0px, -0.0230635%, 0px);">
-								<img src="img/u8.png" />
+								<img src="img/palmroom.png" />
 							</div>
 						</div>
 						<div class="col-lg-6 text-center ">
-							<h3 class="font-weight-extra-bold text-primary mt-5 pt-4"><em>SURF</em></h3>
-							<p>Ride the waves and feels the energy of the Atlantic Ocen. <br> Whether you're a beginner or experienced, our local instructors will <br> guide you. <br>Experience the thrill of surfong in Morocco's iconic surf spots.</p>
+							<h3 class="font-weight-extra-bold text-primary mt-5 pt-4">PALM ROOM</h3>
+							<p>Our double room is a cozy and welcoming space featuring a<br> comfortable double bed, soft colors, and subtle Moroccan touches.<br> Perfect for couples or solo travelers, the room blends charm and<br> simplicity, offering the ideal place to rest after a day of adventure.<br> This room is available exclusively when you book one of our stay<br> packages.</p>
+
+              							<div class="separator02"></div>
+              
 						</div>
 					</div>
 					<div class="row align-items-center justify-content-around mt-5">
 						<div class="col-lg-6 text-center">
-							<h3 class="font-weight-extra-bold text-primary mt-5 pt-4"><em>SKATE</em></h3>
-							<p>Join fellow travelers for fun skate sessions in a friendly<br>environment.<br> Feel the freedom of the board and embrace the local skate culture.<br> Share laughs, tricks, and moments that connect you with others.</p>
+							<h3 class="font-weight-extra-bold text-primary mt-5 pt-4"><em>SUNNY ROOM</em></h3>
+							<p>Our shared room features 3 comfortable single beds in a bright and<br> welcoming space. Designed for friends or solo travelers, it offers a<br> relaxed atmosphere where simplicity meets Moroccan charm. It’s<br> the perfect choice for those who enjoy a social, cozy setting. This<br> room is available exclusively when you book one of our stay<br> packages.</p>
 						</div>
 						<div class="col-lg-5 p-relative pt-5 max-width-custom-1">
 							<div class="p-absolute left-0">
 							</div>
 															<div data-plugin-float-element="" data-plugin-options="{'startPos': 'bottom', 'speed': 10.0, 'transition': true, 'transitionDuration': 1000}" style="bottom: 0px; transition: transform 1000ms ease-out; transform: translate3d(0px, -0.0230635%, 0px);">
-								<img src="img/u7.png" />
+								<img src="img/sunnyroom.png" />
 							</div>
 						</div>
 					</div>
