--- a/packages.html
+++ b/packages.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>EL STAR - Packages</title>	
+		<title>EL STAR - PACKAGES</title>	
 
 		<meta name="keywords" content="WebSite Template" />
 		<meta name="description" content="El STAR it's hostel and surf camp">
