--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
 					<div class="row py-5 my-4">
 						<div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Terms and conditions </a>
+							<a href="TermsAndConditions.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Terms and conditions </a>
 							
 						</div>
 						<div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
