--- a/Privacypolicy.html
+++ b/Privacypolicy.html
@@ -101,54 +101,29 @@
 					<div class="container">
 						<div class="row py-5">
 							<div class="col-lg-10 text-center offset-lg-1">
-								<h2 class="text-dark text-stroke-gradient text-stroke-gradient-primary-dark text-stroke-width-3 text-15 line-height-2 ls-0 font-weight-bold mb-0">Terms And Comditions</h2>
+								<h2 class="text-dark text-stroke-gradient text-stroke-gradient-primary-dark text-stroke-width-3 text-15 line-height-2 ls-0 font-weight-bold mb-0">Privacy Policy</h2>
 								<div class="row">
 						<div class="col">
 							<h5 class="pt-3 line-height-4">
-Welcome to the El_Star_Hostel website. By accessing our site and using our services, you agree to these Terms and Conditions. They are designed to inform you about our booking, payment, and cancellation policies, as well as the rules that ensure a pleasant stay for all our guests.<br>
-We invite you to read them carefully to enjoy a smooth and friendly experience at our hostel.</h5>
-							<p class="text-start">1. Reservations</p>
-							<h6 class="text-start line-height-4">Reservations can be made directly through our website, by email at el.star.hostel@gmail.com, <br>or via WhatsApp at +212 774-476707.<br>
-A 30% deposit is required to confirm your reservation. Once received, you’ll receive a confirmation email or message with your stay details.</h6>
-								<p class="text-start">2. Payments</p>
-							<h6 class="text-start line-height-4">The remaining balance must be paid upon arrival. We accept cash (MAD), bank transfer, or secure online payment.<br>
-Prices include taxes unless stated otherwise. Once confirmed, your rate remains fixed.</h6>
-								<p class="text-start">3. Cancellations and Modifications</p>
-							<h6 class="text-start line-height-4">+14 days before arrival: full refund of deposit.<br>
-
-7–14 days before: deposit retained, but credit valid for 6 months.<br>
-
-Less than 7 days or no-show: deposit non-refundable.<br>
-In case of force majeure, a refund or postponement may be offered.
+This Privacy Policy explains how El_Star_Hostel collects, uses, and protects your personal information when you visit our website or stay with us.</h5>
+							<p class="text-start">1. Information We Collect</p>
+							<h6 class="text-start line-height-4">We may collect the following details:<br>Full name and contact information (email, phone, country).<br>Booking and payment details.<br>Optional information you share (preferences, travel dates, etc.).
 </h6>
-								<p class="text-start">4. Check-in & Check-out</p>
-							<h6 class="text-start line-height-4">Check-in: from 2:00 PM<br>
-
-Check-out: before 12:00 AM<br>
-Late check-out may be available upon request.</h6>
-								<p class="text-start">5. Included Services</p>
-							<h6 class="text-start line-height-4">Wi-Fi, shared kitchen, game room, lockers, and lounge areas are included.<br>
-Optional extras: airport transfers, berber activity, (video/photos) of the trip  (must be booked in advance).</h6>
-								<p class="text-start">6. Travel Insurance</p>
-							<h6 class="text-start line-height-4">We recommend travel insurance covering cancellations, health, and activities. The hostel is not responsible for lost belongings or injuries during external activities.</h6>
-								<p class="text-start">7. Liability</p>
-							<h6 class="text-start line-height-4">Guests participate in activities at their own risk. The hostel is not liable for accidents unless due to proven negligence.</h6>
-								<p class="text-start">8. Behavior</p>
-							<h6 class="text-start line-height-4">Respect quiet hours (22:00–08:00), no smoking indoors, and maintain a friendly atmosphere.<br>
-Disruptive behavior may result in eviction without refund.</h6>
-								<p class="text-start">9. Intellectual Property</p>
-							<h6 class="text-start line-height-4">All website content belongs to El_Star_Hostel and cannot be copied without permission.</h6>
-								<p class="text-start">10. Changes</p>
-							<h6 class="text-start">We may update these terms anytime without notice.</h6>
-								<p class="text-start">11. Contact</p>
-							<h6 class="text-start line-height-4">📧 el.star.hostel@gmail.com<br>
-
-📞 ‪+212 774-476707‬<br>
-📍 Aourir, Agadir, Morocco<br>
-📱 @el_star_hostel<br>
-
-© 2025 El_Star_Hostel, Morocco
-</h6>
+								<p class="text-start">2. How We Use Your Data</p>
+							<h6 class="text-start line-height-4">Your information is used to:<br>Confirm and manage bookings.<br>Communicate about your stay.<br>Send updates or offers (if you opt-in).<br>Improve our services and guest experience.</h6>
+								<p class="text-start">3. Data Protection</p>
+							<h6 class="text-start line-height-4">Your data is kept secure and confidential. We never sell or share your information with third parties, except when required by law or for booking processing.</h6>
+								<p class="text-start">4. Cookies and Website Use</p>
+							<h6 class="text-start line-height-4">Our website may use cookies to enhance navigation and measure traffic. You can disable cookies in your browser at any time.</h6>
+								<p class="text-start">5. Data Retention</p>
+							<h6 class="text-start line-height-4">We keep your booking information for accounting and service improvement, then securely delete or anonymize it.</h6>
+								<p class="text-start">6. Your Rights</p>
+							<h6 class="text-start line-height-4">You have the right to:<br>Access, correct, or delete your data.<br>Withdraw consent for marketing communication.<br>To do so, contact us at el.star.hostel@gmail.com</h6>
+								<p class="text-start">7. Third-Party Services</p>
+							<h6 class="text-start line-height-4">We may use third-party booking platforms (e.g., Airbnb) that follow their own privacy policies.</h6>
+								<p class="text-start">8. Updates</p>
+							<h6 class="text-start line-height-4">This Privacy Policy may be updated. Changes will appear on our website.<br>📧 For questions, email us at el.star.hostel@gmail.com<br>
+© 2025 El_Star_Hostel, Morocco</h6>
 							</div>
 					</div>
 							</div>
