--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
 							
 						</div>
 						<div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Privacy Policy</a>
+							<a href="Privacypolicy.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Privacy Policy</a>
 						</div>
 						<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Common Rules</a>
