--- a/FAQ.html
+++ b/FAQ.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>EL STAR - Terms And Conditions</title>	
+		<title>EL STAR - Common Rules</title>	
 
 		<meta name="keywords" content="WebSite Template" />
 		<meta name="description" content="El STAR it's hostel and surf camp">
@@ -101,54 +101,31 @@
 					<div class="container">
 						<div class="row py-5">
 							<div class="col-lg-10 text-center offset-lg-1">
-								<h2 class="text-dark text-stroke-gradient text-stroke-gradient-primary-dark text-stroke-width-3 text-15 line-height-2 ls-0 font-weight-bold mb-0">Terms And Comditions</h2>
+								<h2 class="text-dark text-stroke-gradient text-stroke-gradient-primary-dark text-stroke-width-3 text-15 line-height-2 ls-0 font-weight-bold mb-0">Common Rules</h2>
 								<div class="row">
 						<div class="col">
-							<h5 class="pt-3 line-height-4">
-Welcome to the El_Star_Hostel website. By accessing our site and using our services, you agree to these Terms and Conditions. They are designed to inform you about our booking, payment, and cancellation policies, as well as the rules that ensure a pleasant stay for all our guests.<br>
-We invite you to read them carefully to enjoy a smooth and friendly experience at our hostel.</h5>
-							<p class="text-start">1. Reservations</p>
-							<h6 class="text-start line-height-4">Reservations can be made directly through our website, by email at el.star.hostel@gmail.com, <br>or via WhatsApp at +212 774-476707.<br>
-A 30% deposit is required to confirm your reservation. Once received, you’ll receive a confirmation email or message with your stay details.</h6>
-								<p class="text-start">2. Payments</p>
-							<h6 class="text-start line-height-4">The remaining balance must be paid upon arrival. We accept cash (MAD), bank transfer, or secure online payment.<br>
-Prices include taxes unless stated otherwise. Once confirmed, your rate remains fixed.</h6>
-								<p class="text-start">3. Cancellations and Modifications</p>
-							<h6 class="text-start line-height-4">+14 days before arrival: full refund of deposit.<br>
-
-7–14 days before: deposit retained, but credit valid for 6 months.<br>
-
-Less than 7 days or no-show: deposit non-refundable.<br>
-In case of force majeure, a refund or postponement may be offered.
-</h6>
-								<p class="text-start">4. Check-in & Check-out</p>
-							<h6 class="text-start line-height-4">Check-in: from 2:00 PM<br>
-
-Check-out: before 12:00 AM<br>
-Late check-out may be available upon request.</h6>
-								<p class="text-start">5. Included Services</p>
-							<h6 class="text-start line-height-4">Wi-Fi, shared kitchen, game room, lockers, and lounge areas are included.<br>
-Optional extras: airport transfers, berber activity, (video/photos) of the trip  (must be booked in advance).</h6>
-								<p class="text-start">6. Travel Insurance</p>
-							<h6 class="text-start line-height-4">We recommend travel insurance covering cancellations, health, and activities. The hostel is not responsible for lost belongings or injuries during external activities.</h6>
-								<p class="text-start">7. Liability</p>
-							<h6 class="text-start line-height-4">Guests participate in activities at their own risk. The hostel is not liable for accidents unless due to proven negligence.</h6>
-								<p class="text-start">8. Behavior</p>
-							<h6 class="text-start line-height-4">Respect quiet hours (22:00–08:00), no smoking indoors, and maintain a friendly atmosphere.<br>
-Disruptive behavior may result in eviction without refund.</h6>
-								<p class="text-start">9. Intellectual Property</p>
-							<h6 class="text-start line-height-4">All website content belongs to El_Star_Hostel and cannot be copied without permission.</h6>
-								<p class="text-start">10. Changes</p>
-							<h6 class="text-start">We may update these terms anytime without notice.</h6>
-								<p class="text-start">11. Contact</p>
-							<h6 class="text-start line-height-4">📧 el.star.hostel@gmail.com<br>
-
-📞 ‪+212 774-476707‬<br>
-📍 Aourir, Agadir, Morocco<br>
-📱 @el_star_hostel<br>
+							<h5 class="pt-3 line-height-4">We want El_Star_Hostel to feel like home for everyone. Please follow these simple rules to keep our space peaceful, friendly, and safe.</h5>
+							<p class="text-start">1. Quiet Hours</p>
+							<h6 class="text-start line-height-4">From 22:00 to 08:00.<br>
+Please respect others’ rest, especially in shared rooms.</h6>
+								<p class="text-start">2. Cleanliness</p>
+							<h6 class="text-start line-height-4">Keep shared areas and the kitchen tidy.<br>Wash your dishes after use.<br>Dispose of trash in bins provided.</h6>
+								<p class="text-start">3. Smoking & Alcohol</p>
+							<h6 class="text-start line-height-4">Smoking is not allowed inside rooms or indoor areas.<br>You may smoke in designated outdoor spaces.<br>Alcohol is allowed in moderation in common areas only.</h6>
+								<p class="text-start">4. Visitors</p>
+							<h6 class="text-start line-height-4">Only registered guests are allowed in dorms and private rooms.<br>Visitors are welcome in common areas until 22:00.</h6>
+								<p class="text-start">5. Safety</p>
+							<h6 class="text-start line-height-4">Keep valuables in provided lockers.<br>Always lock your room or locker when leaving.<br>Report any issue to staff immediately.</h6>
+								<p class="text-start">6. Respect</p>
+							<h6 class="text-start line-height-4">Be kind and respectful to guests, staff, and local culture.<br>Offensive, noisy, or disrespectful behavior will not be tolerated.</h6>
+								<p class="text-start">7. Pets</p>
+							<h6 class="text-start line-height-4">Pets are not allowed.</h6>
+								<p class="text-start">8. Activities</p>
+							<h6 class="text-start line-height-4">Activities like yoga, hiking, or surfing are at your own risk. Follow safety instructions and guides.</h6>
+							<h5 class="line-height-4">Thank you for helping us maintain a calm, social, and family-friendly hostel environment ❤<br>
 
 © 2025 El_Star_Hostel, Morocco
-</h6>
+</h5>
 							</div>
 					</div>
 							</div>
@@ -173,7 +150,7 @@ Disruptive behavior may result in eviction without refund.</h6>
 
 						</div>
 						<div class="col-md-6 col-lg-2">
-							<a href="FAQ.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
+							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
 
 						</div>
 					</div>
