--- a/Privacypolicy.html
+++ b/Privacypolicy.html
@@ -144,11 +144,11 @@ This Privacy Policy explains how El_Star_Hostel collects, uses, and protects you
 							<a href="Privacypolicy.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Privacy Policy</a>
 						</div>
 						<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Common Rules</a>
+							<a href="Commonrules.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Common Rules</a>
 
 						</div>
 						<div class="col-md-6 col-lg-2">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
+							<a href="FAQ.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
 
 						</div>
 					</div>
