--- a/index.html
+++ b/index.html
@@ -541,11 +541,11 @@
 							<a href="Privacypolicy.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Privacy Policy</a>
 						</div>
 						<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Common Rules</a>
+							<a href="Commonrules.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Common Rules</a>
 
 						</div>
 						<div class="col-md-6 col-lg-2">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
+							<a href="FAQ.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
 
 						</div>
 					</div>
