--- a/FAQ.html
+++ b/FAQ.html
@@ -97,41 +97,100 @@
 				</div>
 			</header>
 
-			<section id="intro" class="section section-no-border bg-light pt-0 pb-4 m-0">
-					<div class="container">
-						<div class="row py-5">
-							<div class="col-lg-10 text-center offset-lg-1">
-								<h2 class="text-dark text-stroke-gradient text-stroke-gradient-primary-dark text-stroke-width-3 text-15 line-height-2 ls-0 font-weight-bold mb-0">Common Rules</h2>
-								<div class="row">
-						<div class="col">
-							<h5 class="pt-3 line-height-4">We want El_Star_Hostel to feel like home for everyone. Please follow these simple rules to keep our space peaceful, friendly, and safe.</h5>
-							<p class="text-start">1. Quiet Hours</p>
-							<h6 class="text-start line-height-4">From 22:00 to 08:00.<br>
-Please respect others’ rest, especially in shared rooms.</h6>
-								<p class="text-start">2. Cleanliness</p>
-							<h6 class="text-start line-height-4">Keep shared areas and the kitchen tidy.<br>Wash your dishes after use.<br>Dispose of trash in bins provided.</h6>
-								<p class="text-start">3. Smoking & Alcohol</p>
-							<h6 class="text-start line-height-4">Smoking is not allowed inside rooms or indoor areas.<br>You may smoke in designated outdoor spaces.<br>Alcohol is allowed in moderation in common areas only.</h6>
-								<p class="text-start">4. Visitors</p>
-							<h6 class="text-start line-height-4">Only registered guests are allowed in dorms and private rooms.<br>Visitors are welcome in common areas until 22:00.</h6>
-								<p class="text-start">5. Safety</p>
-							<h6 class="text-start line-height-4">Keep valuables in provided lockers.<br>Always lock your room or locker when leaving.<br>Report any issue to staff immediately.</h6>
-								<p class="text-start">6. Respect</p>
-							<h6 class="text-start line-height-4">Be kind and respectful to guests, staff, and local culture.<br>Offensive, noisy, or disrespectful behavior will not be tolerated.</h6>
-								<p class="text-start">7. Pets</p>
-							<h6 class="text-start line-height-4">Pets are not allowed.</h6>
-								<p class="text-start">8. Activities</p>
-							<h6 class="text-start line-height-4">Activities like yoga, hiking, or surfing are at your own risk. Follow safety instructions and guides.</h6>
-							<h5 class="line-height-4">Thank you for helping us maintain a calm, social, and family-friendly hostel environment ❤<br>
+	<div role="main" class="main">
 
-© 2025 El_Star_Hostel, Morocco
-</h5>
-							</div>
-					</div>
+				<section class="page-header page-header-modern bg-color-grey page-header-lg">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 align-self-center p-static order-2 text-center">								<h1 class="font-weight-bold text-dark">FAQ</h1>							</div>							<div class="col-md-12 align-self-center order-1">
+								<ul class="breadcrumb d-block text-center">
+									<li><a href="#">Home</a></li>
+									<li class="active">Pages</li>
+								</ul>
 							</div>
 						</div>
 					</div>
 				</section>
+
+				<div class="container py-4">
+
+					<div class="row">
+						<div class="col">
+
+							<h2 class="font-weight-normal text-7 mb-2">Frequently Asked <strong class="font-weight-extra-bold">Questions</strong></h2>
+							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In eu libero ligula.</p>
+
+							<hr class="solid my-5">
+
+							<div class="toggle toggle-primary m-0" data-plugin-toggle="">
+								<section class="toggle active">
+									<a class="toggle-title">What time are check-in and check-out?</a>
+									<div class="toggle-content" style="display: block;">
+										<p>Check-in is from 2:00 PM, and check-out is before 12:00 AM.</p>
+									</div>
+								</section>
+
+								<section class="toggle">
+									<a class="toggle-title">Is breakfast and dinner included?</a>
+									<div class="toggle-content">
+										<p>Breakfast and dinner are included.</p>
+									</div>
+								</section>
+
+								<section class="toggle">
+									<a class="toggle-title">Do you have Wi-Fi?</a>
+									<div class="toggle-content">
+										<p>Yes, free Wi-Fi is available in all rooms and common areas.</p>
+									</div>
+								</section>
+
+								<section class="toggle">
+									<a class="toggle-title">Is there parking nearby?</a>
+									<div class="toggle-content">
+										<p>Yes, free public parking is available near the hostel.</p>
+									</div>
+								</section>
+
+								<section class="toggle">
+									<a class="toggle-title">Do you offer private and shared rooms?</a>
+									<div class="toggle-content">
+										<p>Yes — we have both private rooms and mixed dorms.</p>
+										</div>
+								</section>
+
+								<section class="toggle">
+									<a class="toggle-title">Can I cook my own meals?</a>
+									<div class="toggle-content">
+										<p>Yes, guests can use our small shared kitchen anytime.</p>
+										</div>
+								</section>
+
+								<section class="toggle">
+									<a class="toggle-title">Do you allow pets?</a>
+									<div class="toggle-content">
+										<p>Pets are not allowed.</p>
+										</div>
+								</section>
+
+								<section class="toggle">
+									<a class="toggle-title">How can I contact you?</a>
+									<div class="toggle-content">
+										<p>📧 el.star.hostel@gmail.com<br>
+
+📞 +212 774-476707<br>
+📱 Instagram: @el_star_hostel
+</p>
+										</div>
+								</section>
+							</div>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
 
 
 			<footer id="footer" class="footer-reveal bg-color-secondary border-0 mt-0">
