--- a/FAQ.html
+++ b/FAQ.html
@@ -104,7 +104,7 @@
 						<div class="row">
 							<div class="col-md-12 align-self-center p-static order-2 text-center">								<h1 class="font-weight-bold text-dark">FAQ</h1>							</div>							<div class="col-md-12 align-self-center order-1">
 								<ul class="breadcrumb d-block text-center">
-									<li><a href="#">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li class="active">Pages</li>
 								</ul>
 							</div>
@@ -118,10 +118,8 @@
 						<div class="col">
 
 							<h2 class="font-weight-normal text-7 mb-2">Frequently Asked <strong class="font-weight-extra-bold">Questions</strong></h2>
-							<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc <a href="#">vehicula</a> lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In eu libero ligula.</p>
-
 							<hr class="solid my-5">
-
+<div class="separator02"></div>
 							<div class="toggle toggle-primary m-0" data-plugin-toggle="">
 								<section class="toggle active">
 									<a class="toggle-title">What time are check-in and check-out?</a>
