--- a/TermsAndConditions.html
+++ b/TermsAndConditions.html
@@ -98,6 +98,18 @@
 			</header>
 
 			<section id="intro" class="section section-no-border bg-light pt-0 pb-4 m-0">
+				<section class="page-header page-header-modern bg-color-grey page-header-lg">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 align-self-center p-static order-2 text-center">								<h1 class="font-weight-bold text-dark">Terms And Comditions</h1>							</div>							<div class="col-md-12 align-self-center order-1">
+								<ul class="breadcrumb d-block text-center">
+									<li><a href="index.html">Home</a></li>
+									<li class="active">Pages</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
 					<div class="container">
 						<div class="row py-5">
 							<div class="col-lg-10 text-center offset-lg-1">
@@ -107,6 +119,7 @@
 							<h5 class="pt-3 line-height-4">
 Welcome to the El_Star_Hostel website. By accessing our site and using our services, you agree to these Terms and Conditions. They are designed to inform you about our booking, payment, and cancellation policies, as well as the rules that ensure a pleasant stay for all our guests.<br>
 We invite you to read them carefully to enjoy a smooth and friendly experience at our hostel.</h5>
+<div class="separator02"></div>
 							<p class="text-start">1. Reservations</p>
 							<h6 class="text-start line-height-4">Reservations can be made directly through our website, by email at el.star.hostel@gmail.com, <br>or via WhatsApp at +212 774-476707.<br>
 A 30% deposit is required to confirm your reservation. Once received, you’ll receive a confirmation email or message with your stay details.</h6>
