--- a/Commonrules.html
+++ b/Commonrules.html
@@ -98,6 +98,18 @@
 			</header>
 
 			<section id="intro" class="section section-no-border bg-light pt-0 pb-4 m-0">
+				<section class="page-header page-header-modern bg-color-grey page-header-lg">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 align-self-center p-static order-2 text-center">								<h1 class="font-weight-bold text-dark">Common Rules</h1>							</div>							<div class="col-md-12 align-self-center order-1">
+								<ul class="breadcrumb d-block text-center">
+									<li><a href="index.html">Home</a></li>
+									<li class="active">Pages</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
 					<div class="container">
 						<div class="row py-5">
 							<div class="col-lg-10 text-center offset-lg-1">
@@ -105,6 +117,7 @@
 								<div class="row">
 						<div class="col">
 							<h5 class="pt-3 line-height-4">We want El_Star_Hostel to feel like home for everyone. Please follow these simple rules to keep our space peaceful, friendly, and safe.</h5>
+							<div class="separator02"></div>
 							<p class="text-start">1. Quiet Hours</p>
 							<h6 class="text-start line-height-4">From 22:00 to 08:00.<br>
 Please respect others’ rest, especially in shared rooms.</h6>
