--- a/Privacypolicy.html
+++ b/Privacypolicy.html
@@ -98,6 +98,18 @@
 			</header>
 
 			<section id="intro" class="section section-no-border bg-light pt-0 pb-4 m-0">
+				<section class="page-header page-header-modern bg-color-grey page-header-lg">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12 align-self-center p-static order-2 text-center">								<h1 class="font-weight-bold text-dark">Privacy Policy</h1>							</div>							<div class="col-md-12 align-self-center order-1">
+								<ul class="breadcrumb d-block text-center">
+									<li><a href="index.html">Home</a></li>
+									<li class="active">Pages</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
 					<div class="container">
 						<div class="row py-5">
 							<div class="col-lg-10 text-center offset-lg-1">
@@ -106,6 +118,7 @@
 						<div class="col">
 							<h5 class="pt-3 line-height-4">
 This Privacy Policy explains how El_Star_Hostel collects, uses, and protects your personal information when you visit our website or stay with us.</h5>
+<div class="separator02"></div>
 							<p class="text-start">1. Information We Collect</p>
 							<h6 class="text-start line-height-4">We may collect the following details:<br>Full name and contact information (email, phone, country).<br>Booking and payment details.<br>Optional information you share (preferences, travel dates, etc.).
 </h6>
