--- a/FAQ.html
+++ b/FAQ.html
@@ -207,7 +207,7 @@
 
 						</div>
 						<div class="col-md-6 col-lg-2">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
+							<a href="FAQ.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
 
 						</div>
 					</div>
