--- a/rooms.html
+++ b/rooms.html
@@ -264,18 +264,18 @@
 
 					<div class="row py-5 my-4">
 						<div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Terms and conditions </a>
+							<a href="TermsAndConditions.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Terms and conditions </a>
 							
 						</div>
 						<div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Privacy Policy</a>
+							<a href="Privacypolicy.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Privacy Policy</a>
 						</div>
 						<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Common Rules</a>
+							<a href="Commonrules.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">Common Rules</a>
 
 						</div>
 						<div class="col-md-6 col-lg-2">
-							<a href="#" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
+							<a href="FAQ.html" class="text-4 line-height-7 text-decoration-none text-color-light mb-3">FAQ</a>
 
 						</div>
 					</div>
