--- a/index.html
+++ b/index.html
@@ -340,127 +340,68 @@
 								</div>
 							</div>
 <section id="whoweare" class="section section-with-shape-divider bg-transparent border-0 m-0">
+		<!-- Gallery -->
+<div class="row">
+  <div class="col-lg-3 col-md-12 mb-4 mb-lg-0">
+    <img
+      src="img/A1.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Boat on Calm Water"
+    />
 
-<div class="container">
-					<div class="row">
-						<div class="col">
+    <img
+      src="img/A2.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Wintry Mountain Landscape"
+    />
+  </div>
 
+  <div class="col-lg-5 mb-4 mb-lg-0">
+    <img
+      src="img/B1.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Mountains in the Clouds"
+    />
 
-							<div class="row">
+    <img
+      src="img/B2.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Boat on Calm Water"
+    />
+  </div>
 
-								<div class="col-lg-4">
+  <div class="col-lg-4 mb-4 mb-lg-0">
+    <img
+      src="img/C1.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Waves at Sea"
+    />
+	<div class="col-lg-4 mb-4 mb-lg-0">
+    <img
+      src="img/C2.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Yosemite National Park"
+    />
+	<img
+      src="img/C3.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Yosemite National Park"
+    /></div>
+	<div class="col-lg-4 mb-4 mb-lg-0">
+	<img
+      src="img/C4.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Yosemite National Park"
+    />
+	<img
+      src="img/C5.png"
+      class="w-100 shadow-1-strong rounded mb-4"
+      alt="Yosemite National Park"
+    /></div>
+  </div>
+</div>
+<!-- Gallery -->
 
-									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
-										<span class="thumb-info-wrapper">
-											<img src="img/t1.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: 100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
-										</span>
-									</span>
-
-								</div>
-								<div class="col-lg-4">
-
-									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
-										<span class="thumb-info-wrapper">
-											<img src="img/i1.png" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
-										</span>
-									</span>
-
-								</div>
-								<div class="col-lg-4">
-
-									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
-										<span class="thumb-info-wrapper">
-											<img src="img/i3.png" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: 100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
-										</span>
-									</span>
-
-								</div>
-
-							</div>
-							<div class="row mt-4">
-
-								<div class="col-lg-4">
-
-									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
-										<span class="thumb-info-wrapper">
-											<img src="img/i4.png" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
-										</span>
-									</span>
-
-								</div>
-								<div class="col-lg-4">
-
-									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
-										<span class="thumb-info-wrapper">
-											<img src="img/i5.png" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: 0px; top: -100%; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
-										</span>
-									</span>
-
-								</div>
-								<div class="col-lg-4">
-
-									<span class="thumb-info thumb-info-swap-content thumb-info-centered-icons thumb-info-wrapper-direction-aware">
-										<span class="thumb-info-wrapper">
-											<img src="img/t13.jpg" class="img-fluid" alt="">
-											<span class="thumb-info-wrapper-overlay" style="left: -100%; top: 0px; transition: 300ms;">
-												<span class="thumb-info-action">
-													<a href="#">
-														<span class="thumb-info-action-icon thumb-info-action-icon-light"><i class="fas fa-play-circle text-dark text-dark"></i></span>
-													</a>
-												</span>
-											</span>
-										</span>
-									</span>
-
-								</div>
-
-							</div>
-
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="col">
-							<hr class="solid my-5">
-						</div>
-					</div>
-				</div>
-					
 				</section>
 						</div>
 					</section>
