--- a/rooms.html
+++ b/rooms.html
@@ -210,6 +210,63 @@
 						</div>
 					</div>
 				</section>
+				<div class="container">
+        <h2 class="mb-4 text-center"></h2>
+
+        <div class="row g-4">
+
+            <div class="col-md-2">
+                <div class="d-flex flex-column gap-4">
+                    <div class="gallery-item">
+                        <img src="img/x11.png" class="img-fluid rounded" alt="Gallery image 1">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="img/x22.png" class="img-fluid rounded" alt="Gallery image 2">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-8">
+                <div class="d-flex flex-column gap-4">
+                    <div class="gallery-item">
+                        <img src="img/y1.png" class="img-fluid rounded" alt="Gallery image 3">
+                    </div>
+                    
+                    <div class="row g-4">
+                        <div class="col-6 gallery-item">
+                            <img src="img/y2.png" class="img-fluid rounded" alt="Gallery image 4">
+                        </div>
+                        <div class="col-6 gallery-item">
+                            <img src="img/y3.png" class="img-fluid rounded" alt="Gallery image 5">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-2">
+                <div class="d-flex flex-column gap-4">
+                    <div class="gallery-item">
+                        <img src="img/z1.png" class="img-fluid rounded" alt="Gallery image 6">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="img/z2.png" class="img-fluid rounded" alt="Gallery image 7">
+                    </div>
+                </div>
+            </div>
+			<div class="col-md-12">
+                <div class="d-flex flex-column gap-4">
+                    
+                    <div class="row g-4">
+                        <div class="col-5 gallery-item">
+                            <img src="img/x3.png" class="img-fluid rounded" alt="Gallery image 4">
+                        </div>
+                        <div class="col-7 gallery-item">
+                            <img src="img/z3.png" class="img-fluid rounded" alt="Gallery image 5">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> </div>
 				<section>
 					<div class="row align-items-center justify-content-around mt-5">
 						<div class="col-lg-6 text-center">
