--- a/rooms.html
+++ b/rooms.html
@@ -210,7 +210,7 @@
 						</div>
 					</div>
 				</section>
-				<div class="container">
+				<div class="container" style="background-image: url('img/roombg.png');background-size: cover;background-position: center;background-repeat: no-repeat;background-attachment: fixed;color: #fff;text-shadow: 1px 1px 2px rgba(0,0,0,0.8);">
         <h2 class="mb-4 text-center"></h2>
 
         <div class="row g-4">
