--- a/rooms.html
+++ b/rooms.html
@@ -168,10 +168,9 @@
 							<img src="img/rd.svg" alt="Drawer 2 SVG Vector Icon" width="40" height="1154" loading="eager" decoding="sync" fetchpriority="high" importance="high" style="width: 375px; height: 13px; max-width: 100%; object-fit: contain;">
 
 							<div class="align-items-center justify-content-around mt-5 text-center mb-5">
-<img src="img/Drawer.svg" alt="Drawer 2 SVG Vector Icon" width="57" height="45" loading="eager" decoding="sync" fetchpriority="high" importance="high" style="width: 45px; height: 57px; max-width: 100%; object-fit: contain;">
+<img src="img/Drawer.svg" alt="Drawer 2 SVG Vector Icon" width="57" height="45" loading="eager" decoding="sync" fetchpriority="high" importance="high" style="width: 45px; height: 57px; max-width: 100%; object-fit: contain;margin-right: 10px;">
 <img src="img/wifi.svg" alt="Wifi 2 SVG Vector Icon" width="57" height="45" loading="eager" decoding="sync" fetchpriority="high" importance="high" style="width: 45px; height: 57px; max-width: 100%; object-fit: contain; ">
 					</div>
-							
 							<a href="booknow.html" class="btn btn-primary btn-xl mb-2">Book Your Package</a>             
 						</div>
 					</div>
@@ -182,7 +181,7 @@
 														<img src="img/rd.svg" alt="Drawer 2 SVG Vector Icon" width="40" height="1154" loading="eager" decoding="sync" fetchpriority="high" importance="high" style="width: 375px; height: 13px; max-width: 100%; object-fit: contain;">
 
 							<div class="align-items-center justify-content-around mt-5 text-center mb-5">
-<img src="img/Drawer.svg" alt="Drawer 2 SVG Vector Icon" width="57" height="45" loading="eager" decoding="sync" fetchpriority="high" importance="high" style="width: 45px; height: 57px; max-width: 100%; object-fit: contain;">
+<img src="img/Drawer.svg" alt="Drawer 2 SVG Vector Icon" width="57" height="45" loading="eager" decoding="sync" fetchpriority="high" importance="high" style="width: 45px; height: 57px; max-width: 100%; object-fit: contain;margin-right: 10px;">
 <img src="img/wifi.svg" alt="Wifi 2 SVG Vector Icon" width="57" height="45" loading="eager" decoding="sync" fetchpriority="high" importance="high" style="width: 45px; height: 57px; max-width: 100%; object-fit: contain; ">
 					</div>
 							<a href="booknow.html" class="btn btn-primary btn-xl mb-2">Book Your Package</a>
