--- a/booknow.html
+++ b/booknow.html
@@ -355,8 +355,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // Hostel WhatsApp number (replace with actual number)
-            const WHATSAPP_NUMBER = '+212774476707'; // Include country code without +
+            // Hostel WhatsApp number 
+            const WHATSAPP_NUMBER = '+212774476707'; 
             
             // Package selection
             const packageCards = document.querySelectorAll('.package-card');
