--- a/contactus.html
+++ b/contactus.html
@@ -169,44 +169,82 @@
 						</div>
 						<div class="col-lg-6 p-relative">
 
-							<form class="contact-form" action="php/contact-form.php" method="POST" novalidate="novalidate">
-								<div class="contact-form-success alert alert-success d-none mt-4">
-									<strong>Success!</strong> Your message has been sent to us.
-								</div>
+							<form id="whatsapp-form" class="contact-form">
 
-								<div class="contact-form-error alert alert-danger d-none mt-4">
-									<strong>Error!</strong> There was an error sending your message.
-									<span class="mail-error-message text-1 d-block"></span>
-								</div>
+    <div class="contact-form-success alert alert-success d-none mt-4">
+        <strong>Success!</strong> Your message has been sent to us.
+    </div>
+    <div class="contact-form-error alert alert-danger d-none mt-4">
+        <strong>Error!</strong> There was an error sending your message.
+        <span class="mail-error-message text-1 d-block"></span>
+    </div>
 
-								<div class="row">
-									<div class="form-group col-lg-6">
-										<label class="form-label font-weight-bold text-uppercase text-dark mb-1 text-2">Your Name *</label>
-										<input type="text" value="" placeholder="Enter your name" data-msg-required="Please enter your name." maxlength="100" class="form-control text-3 h-auto border-width-2 border-radius-2 border-color-grey-200 py-2" name="name" required="">
-									</div>
-									<div class="form-group col-lg-6">
-										<label class="form-label font-weight-bold text-uppercase text-dark mb-1 text-2">Email Address</label>
-										<input type="email" value="" placeholder="Enter your e-mail address" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control text-3 h-auto border-width-2 border-radius-2 border-color-grey-200 py-2" name="email" required="">
-									</div>
-								</div>
-								<div class="row">
-									<div class="form-group col-lg-6">
-										<label class="form-label font-weight-bold text-uppercase text-dark mb-1 text-2">Phone Number</label>
-										<input type="tel" value="" placeholder="Enter your phone number" class="form-control text-3 h-auto border-width-2 border-radius-2 border-color-grey-200 py-2" name="phone">
-									</div>
-								</div>								
-								<div class="row">
-									<div class="form-group col">
-										<label class="form-label font-weight-bold text-uppercase text-dark mb-1 text-2">Additional Information</label>
-										<textarea maxlength="5000" placeholder="Write your message..." rows="8" class="form-control text-3 h-auto border-width-2 border-radius-2 border-color-grey-200 py-2" name="message"></textarea>
-									</div>
-								</div>
-								<div class="row">
-									<div class="form-group col">
-										<a href="demo-cleaning-services-contact.html" class="text-4 custom-header-top-btn-style-1 btn btn-secondary font-weight-bold px-4 px-sm-5 py-3">Send</a>
-									</div>
-								</div>
-							</form>
+    <div class="row">
+        <div class="form-group col-lg-6">
+            <label class="form-label font-weight-bold text-uppercase text-dark mb-1 text-2">Your Name *</label>
+            <input id="form-name" type="text" value="" placeholder="Enter your name" data-msg-required="Please enter your name." maxlength="100" class="form-control text-3 h-auto border-width-2 border-radius-2 border-color-grey-200 py-2" name="name" required="">
+        </div>
+        <div class="form-group col-lg-6">
+            <label class="form-label font-weight-bold text-uppercase text-dark mb-1 text-2">Email Address</label>
+            <input id="form-email" type="email" value="" placeholder="Enter your e-mail address" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control text-3 h-auto border-width-2 border-radius-2 border-color-grey-200 py-2" name="email" required="">
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-lg-6">
+            <label class="form-label font-weight-bold text-uppercase text-dark mb-1 text-2">Phone Number</label>
+            <input id="form-phone" type="tel" value="" placeholder="Enter your phone number" class="form-control text-3 h-auto border-width-2 border-radius-2 border-color-grey-200 py-2" name="phone">
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col">
+            <label class="form-label font-weight-bold text-uppercase text-dark mb-1 text-2">Additional Information</label>
+            <textarea id="form-message" maxlength="5000" placeholder="Write your message..." rows="8" class="form-control text-3 h-auto border-width-2 border-radius-2 border-color-grey-200 py-2" name="message"></textarea>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col">
+            <button type="submit" class="text-4 custom-header-top-btn-style-1 btn btn-secondary font-weight-bold px-4 px-sm-5 py-3">
+                Send via WhatsApp
+            </button>
+        </div>
+    </div>
+</form>
+
+<script>
+// Kantssnaw l-form ydar liha 'submit' (mli l-client yclicki 3la "Send")
+document.getElementById('whatsapp-form').addEventListener('submit', function(event) {
+    // Kangolo l-form matsubmitich b l-tariqa l-3adia
+    event.preventDefault();
+
+    // =================================================================
+    // !!! IMPORTANT: BEDDEL HAD NMRA B NMRA DYALK (BLA 0, BDA B 212) !!!
+    // =================================================================
+    const recipientNumber = '212774476707'; // Matalan: 212612345678
+
+    // Kanjbdo l-ma3lomat mn l-form
+    const name = document.getElementById('form-name').value;
+    const email = document.getElementById('form-email').value;
+    const phone = document.getElementById('form-phone').value;
+    const message = document.getElementById('form-message').value;
+
+    // Kanqado l-message li ghaymchi l WhatsApp
+    // L-notation *...* katban bold f WhatsApp
+    let waMessage = `Hello, I'm contacting you from the website.\n\n`;
+    waMessage += `*Name:* ${name}\n`;
+    waMessage += `*Email:* ${email}\n`;
+    waMessage += `*Phone:* ${phone}\n\n`;
+    waMessage += `*Message:*\n${message}`;
+
+    // Kanqado l-message bach ykon mzyan f l-URL (kandiro lih encoding)
+    const encodedMessage = encodeURIComponent(waMessage);
+
+    // Kanqado l-lien dyal WhatsApp
+    const whatsappUrl = `https://wa.me/${recipientNumber}?text=${encodedMessage}`;
+
+    // Kanft7o l-lien f page jdida (tab)
+    window.open(whatsappUrl, '_blank');
+});
+</script>
 
 						</div>
 					</div>
