--- a/contactus.html
+++ b/contactus.html
@@ -241,7 +241,7 @@ document.getElementById('whatsapp-form').addEventListener('submit', function(eve
 			</div>
 
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d234.31655993245624!2d-9.652708724890733!3d30.495379865053838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sma!4v1761399614992!5m2!1sen!2sma" width="100%" height="100%"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d234.31655993245624!2d-9.652708724890733!3d30.495379865053838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sma!4v1761399614992!5m2!1sen!2sma" width="100%" height="400px"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
 			
