--- a/rooms.html
+++ b/rooms.html
@@ -200,7 +200,7 @@
 				</div>
 
 			</div>
-				<section class="section section-secondary section-text-light section-center mt-5 mb-0" style="position: relative; overflow: hidden;"><div class="parallax-background" ></div>
+				<section class="section section-secondary section-text-light section-center mt-5 mb-0 p-0" style="position: relative; overflow: hidden;"><div class="parallax-background" ></div>
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-lg-10">
@@ -208,7 +208,7 @@
 																			<div class="testimonial testimonial-style-2 testimonial-with-quotes mb-0">
 
 									<blockquote>
-									<h1 class="font-weight-extra-bold"> THE MOROCCAN LOUNGE</h1></blockquote>
+									<h1 class="font-weight-extra-bold pt-3 mb-0"> THE MOROCCAN LOUNGE</h1></blockquote>
 																			</div>
 																			
 									</div>
