--- a/contactus.html
+++ b/contactus.html
@@ -241,10 +241,34 @@ document.getElementById('whatsapp-form').addEventListener('submit', function(eve
 			</div>
 
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d234.31655993245624!2d-9.652708724890733!3d30.495379865053838!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sma!4v1761399614992!5m2!1sen!2sma" width="100%" height="400px"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<!-- Google map code from EZ Map - https://ezmap.co -->
+<script src='https://maps.googleapis.com/maps/api/js?key=&libraries=visualization'></script>
+<script>
+  function init() {
+    var mapOptions = { "center": {  "lat": 30.495348997898333,  "lng": -9.652829677983918 }, "clickableIcons": true, "disableDoubleClickZoom": false, "draggable": true, "fullscreenControl": true, "keyboardShortcuts": true, "mapTypeControl": true, "mapTypeControlOptions": {  "text": "Default (depends on viewport size etc.)",  "style": 0 }, "mapTypeId": "roadmap", "rotateControl": true, "scaleControl": true, "scrollwheel": true, "streetViewControl": true, "styles": false, "zoom": 18, "zoomControl": true};
+    var mapElement = document.getElementById('ez-map');
+    var map = new google.maps.Map(mapElement, mapOptions);
+    var marker0 = new google.maps.Marker({title: "El Star Hostel", icon: "https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi.png", position: new google.maps.LatLng(30.49532628049381, -9.652913731822627), map: map});
+var infowindow0 = new google.maps.InfoWindow({content: "<h3 class=\"infoTitle\">El Star Hostel</h3><p></p>",map: map});
+marker0.addListener('click', function () { infowindow0.open(map, marker0) ;});infowindow0.close();
+var heatmap = new google.maps.visualization.HeatmapLayer({data: []});heatmap.setOptions({"dissipating":false,"opacity":0.6,"radius":2});heatmap.setMap(map);
+    window.addEventListener("resize", function() { var center = map.getCenter(); google.maps.event.trigger(map, "resize"); map.setCenter(center); });
+  }
+window.addEventListener('load', init);
+</script>
+<style>
+  #ez-map { min-height:150px; min-width:150px; height: 420px; width: 100%; }
+  #ez-map .infoTitle { /*marker window title styles*/ }
+  #ez-map .infoWebsite { /*marker window website styles*/ }
+  #ez-map .infoEmail { /*marker window email address styles*/ }
+  #ez-map .infoTelephone { /*marker window telephone styles*/ }
+  #ez-map .infoDescription { /*marker window description styles*/ }
+</style>
+<div id='ez-map'></div>
+<!-- End of EZ Map code - https://ezmap.co -->
 
 
-			
+
 	<div class="container py-5">
 					<div class="row py-3">
 						<div class="col-md-4 mb-5 mb-md-0">
