--- a/contactus.html
+++ b/contactus.html
@@ -241,32 +241,18 @@ document.getElementById('whatsapp-form').addEventListener('submit', function(eve
 			</div>
 
 
-			<!-- Google map code from EZ Map - https://ezmap.co -->
-<script src='https://maps.googleapis.com/maps/api/js?key=&libraries=visualization'></script>
-<script>
-  function init() {
-    var mapOptions = { "center": {  "lat": 30.495348997898333,  "lng": -9.652829677983918 }, "clickableIcons": true, "disableDoubleClickZoom": false, "draggable": true, "fullscreenControl": true, "keyboardShortcuts": true, "mapTypeControl": true, "mapTypeControlOptions": {  "text": "Default (depends on viewport size etc.)",  "style": 0 }, "mapTypeId": "roadmap", "rotateControl": true, "scaleControl": true, "scrollwheel": true, "streetViewControl": true, "styles": false, "zoom": 18, "zoomControl": true};
-    var mapElement = document.getElementById('ez-map');
-    var map = new google.maps.Map(mapElement, mapOptions);
-    var marker0 = new google.maps.Marker({title: "El Star Hostel", icon: "https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi.png", position: new google.maps.LatLng(30.49532628049381, -9.652913731822627), map: map});
-var infowindow0 = new google.maps.InfoWindow({content: "<h3 class=\"infoTitle\">El Star Hostel</h3><p></p>",map: map});
-marker0.addListener('click', function () { infowindow0.open(map, marker0) ;});infowindow0.close();
-var heatmap = new google.maps.visualization.HeatmapLayer({data: []});heatmap.setOptions({"dissipating":false,"opacity":0.6,"radius":2});heatmap.setMap(map);
-    window.addEventListener("resize", function() { var center = map.getCenter(); google.maps.event.trigger(map, "resize"); map.setCenter(center); });
-  }
-window.addEventListener('load', init);
-</script>
-<style>
-  #ez-map { min-height:150px; min-width:150px; height: 420px; width: 100%; }
-  #ez-map .infoTitle { /*marker window title styles*/ }
-  #ez-map .infoWebsite { /*marker window website styles*/ }
-  #ez-map .infoEmail { /*marker window email address styles*/ }
-  #ez-map .infoTelephone { /*marker window telephone styles*/ }
-  #ez-map .infoDescription { /*marker window description styles*/ }
-</style>
-<div id='ez-map'></div>
-<!-- End of EZ Map code - https://ezmap.co -->
-
+			<div class="mapouter">
+  <div class="gmap_canvas">
+    <iframe src="https://maps.google.com/maps?q=el%20star%20hostel&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" style="width: 100%; height: 400px;"></iframe>
+    <style>
+      /* Added width: 100% */
+      /* Changed width from 1080px to 100% */
+    </style>
+    <a href="https://www.taxuni.com/california-state-tax-rates/">EL STAR HOSTEL</a>
+    <style>
+    </style>
+  </div>
+</div>
 
 
 	<div class="container py-5">
