--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
 								<h3 class="text-color-secondary font-weight-bold text-transform-none line-height-2 text-10 mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1200">
 									OUR PACKAGES<br> 
 								</h3>
-								<h6 class=" mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400"><h6 class="text-primary " style="display: inline-block">At ElStar Hostel, </h6>we offer carefully designed stay packages to suit every traveler. Each option provides comfort,<br> flexibility, and a chance to enjoy the welcoming atmosphere of our hostel.</h6>
+								<p class=" mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400"><p class="text-primary " style="display: inline-block">At ElStar Hostel, </p>we offer carefully designed stay packages to suit every traveler. Each option provides comfort,<br> flexibility, and a chance to enjoy the welcoming atmosphere of our hostel.</p>
 								<ul>
 										<li>7-Night Package: Ideal for a short getaway, giving you time to relax and experience the cozy ambiance of ElStar.</li>
 										<li>10-Night Package: Perfect for those who want a longer stay, allowing you to settle in and fully enjoy the hostel’s vibrant environment.</li>
 										<li>15-Night Package: Designed for travelers seeking an extended stay, offering the opportunity to truly feel at home and immerse in the unique spirit of ElStar.</li>
 									</ul>
-								<h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">No matter which package you choose, each stay at ElStar Hostel is designed to be comfortable, welcoming, and<br> unforgettable.</h6>
+								<p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">No matter which package you choose, each stay at ElStar Hostel is designed to be comfortable, welcoming, and<br> unforgettable.</p>
 
 								<a href="packages.html" class="btn btn-primary btn-modern font-weight-bold text-5 px-5 py-3 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1800">DISCOVER</a>
 							</div>
@@ -205,7 +205,7 @@
 										<li>Double Room: Featuring a cozy double bed, elegant fabrics, and warm Moroccan accents, this room is<br> perfect for couples or solo travelers seeking comfort and style.</li>
 										<li>Shared Room: Our shared dormitory accommodates 3 single beds, ideal for friends or solo adventurers.<br> Each bed is designed with comfort and privacy in mind, while the room’s bohemian decor reflects the<br> local craftsmanship.</li>
 									</ul>
-      <h6 class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Renovated with a unique spirit combining bohemian flair and Moroccan influences, ElStar’s rooms feature<br> captivating colors and artisanal details. Bright, elegant, and inviting, each space encourages you to unwind<br> and feel at home.</h6>
+      <p class="mb-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400" style="line-height: 1.5;">Renovated with a unique spirit combining bohemian flair and Moroccan influences, ElStar’s rooms feature<br> captivating colors and artisanal details. Bright, elegant, and inviting, each space encourages you to unwind<br> and feel at home.</p>
 
       <!-- Only this button is aligned to the right -->
       <div class="text-end">
