--- a/rooms.html
+++ b/rooms.html
@@ -224,26 +224,26 @@
             <div class="col-md-2">
                 <div class="d-flex flex-column gap-4">
                     <div class="gallery-item">
-                        <img src="img/x11.png" class="img-fluid rounded" alt="Gallery image 1">
+                        <img src="img/x11.png" class="img-fluid " alt="Gallery image 1">
                     </div>
                     <div class="gallery-item">
-                        <img src="img/x22.png" class="img-fluid rounded" alt="Gallery image 2">
+                        <img src="img/x22.png" class="img-fluid " alt="Gallery image 2">
                     </div>
                 </div>
             </div>
 
             <div class="col-md-8">
-                <div class="d-flex flex-column gap-4">
+                <div class="d-flex flex-column gap-4 text-center">
                     <div class="gallery-item">
-                        <img src="img/y1.png" class="img-fluid rounded" alt="Gallery image 3">
+                        <img src="img/y1.png" class="img-fluid " alt="Gallery image 3">
                     </div>
                     
                     <div class="row g-4">
                         <div class="col-6 gallery-item">
-                            <img src="img/y2.png" class="img-fluid rounded" alt="Gallery image 4">
+                            <img src="img/y2.png" class="img-fluid " alt="Gallery image 4">
                         </div>
                         <div class="col-6 gallery-item">
-                            <img src="img/y3.png" class="img-fluid rounded" alt="Gallery image 5">
+                            <img src="img/y3.png" class="img-fluid " alt="Gallery image 5">
                         </div>
                     </div>
                 </div>
@@ -252,10 +252,10 @@
             <div class="col-md-2">
                 <div class="d-flex flex-column gap-4">
                     <div class="gallery-item">
-                        <img src="img/z1.png" class="img-fluid rounded" alt="Gallery image 6">
+                        <img src="img/z1.png" class="img-fluid " alt="Gallery image 6">
                     </div>
                     <div class="gallery-item">
-                        <img src="img/z2.png" class="img-fluid rounded" alt="Gallery image 7">
+                        <img src="img/z2.png" class="img-fluid " alt="Gallery image 7">
                     </div>
                 </div>
             </div>
